--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,13 @@
 main {
     font-family: var(--font2);
 }
+li{
+    list-style: disc;
+}
+
+h3{
+    margin-top: 5px;
+}
 
 .content {
     display: flex;
@@ -37,6 +44,9 @@ main {
 }
 
 .img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 320px;
     margin: 0 10px 0 0;
 }
@@ -44,3 +54,10 @@ main {
 .img img {
     width: 300px;
 }
+
+.about{
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
